--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
     <link rel="favicon" type="image/x-icon" href="static/favicon.ico">
     <link rel="manifest" href="static/site.webmanifest">
+    
     <!-- 
 
             This file contains the base styles for the entire application. Below is a documentation of the color schemes and other style attributes used in this application:
@@ -127,6 +128,8 @@
             padding: 10px;
             font-size: 18px;
         }
+
+        /* Git forced update */
 
         /* Active State */
         .mobile-sub-header a.active::after {
