--- a/pythonanywhere/templates/group_index.html
+++ b/pythonanywhere/templates/group_index.html
@@ -65,6 +65,8 @@
             gap: 20px;
         }
 
+        /* Git forced update*/
+
         nav a {
             text-decoration: none;
         }
