--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -758,9 +758,7 @@
         });
 
         function showModal() {
-            const modalOverlay = document.getElementById("modal-overlay");
-            modalOverlay.style.display = "flex";
-            document.getElementById("floating-add-button").style.display = "none";
+            window.location.href = '/login_page?redirect=/index&warning=true';
         }
 
         function hideModal() {
